--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,7 +74,7 @@ jobs:
         if: ${{ needs.build.outputs.github_branch == 'master' }}
         run: |
           aws deploy push --application-name RS-Web \
-            --s3-location bucket=s3://deploy.richmondsunlight.com,key=rs-web-staging.zip,bundleType=zip \
+            --s3-location s3://deploy.richmondsunlight.com/rs-web-staging.zip \
             --ignore-hidden-files
           aws deploy create-deployment \
             --application-name RS-Web \
@@ -85,10 +85,10 @@ jobs:
         if: ${{ needs.build.outputs.github_branch == 'deploy' }}
         run: |
           aws deploy push --application-name RS-Web \
-            --s3-location bucket=s3://deploy.richmondsunlight.com,key=rs-web-deploy.zip,bundleType=zip \
+            --s3-location s3://deploy.richmondsunlight.com/rs-web-deploy.zip \
             --ignore-hidden-files
           aws deploy create-deployment \
             --application-name RS-Web \
             --deployment-group-name RS-Web-Fleet \
             --deployment-config-name CodeDeployDefault.OneAtATime \
-            --s3-location bucket=s3://deploy.richmondsunlight.com,key=rs-web-deploy.zip,bundleType=zip
+            --s3-location bucket=s3://deploy.richmondsunlight.com/,key=rs-web-deploy.zip,bundleType=zip
