--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -149,10 +149,8 @@ RewriteRule ^unsubscribe/([0-9a-z]{8})/$ /unsubscribe.php?hash=$1 [QSA]
 # Your Legislators
 RewriteRule ^your-legislators/$ /your-legislators.php [QSA]
 
-# Campaign Finance
-RewriteRule ^finance/([a-z0-9-]+)/$ /finance/committee.php?committee_id=$1 [QSA]
-RewriteRule ^finance/([a-z0-9-]+)/([a-z0-9-]+)/$ /finance/report.php?committee_id=$1&report_id=$2 [QSA]
-RewriteRule ^finance/([a-z0-9-]+)/([a-z0-9-]+)/([0-9]{5})/$ /finance/individual.php?committee_id=$1&report_id=$2&entry_id=$3 [QSA]
+# Places
+RewriteRule ^places/(.+)?/?$ /places.php [QSA]
 
 # Downloads
 RewriteRule ^downloads/$ /downloads.php [QSA]
