--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -25,7 +25,7 @@ Header always set X-Frame-Options "SAMEORIGIN"
 Header always set X-Xss-Protection "1; mode=block"
 Header always set X-Content-Type-Options "nosniff"
 Header always set Referrer-Policy "strict-origin-when-cross-origin"
-Header always set Content-Security-Policy "default-src: https: 'unsafe-inline'"
+Header always set Content-Security-Policy "default-src"
 Header always edit Set-Cookie (.*) "$1; SameSite=Lax"
 
 <IfModule mod_deflate.c>
