Disallow Amazonbot entirely
This thing is absurdly abusive. I doubt that they will respect robots.txt (the bot's documentation says that they ignore crawl-delay _and_ robots meta tags), so I'd prefer to block them outright.

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -179,7 +179,8 @@ RewriteRule ^photosynthesis/pro?/?$ pro.php [QSA]
 RewriteRule ^photosynthesis/rss/portfolio/([a-z0-9]{5})?/?$ /photosynthesis/rss/portfolio.php?hash=$1 [QSA]
 
 # Block bandwidth abusers
-RewriteCond %{HTTP_USER_AGENT} BDBot/1.0 [NC]
+RewriteCond %{HTTP_USER_AGENT} BDBot/1.0 [NC,OR]
+RewriteCond %{HTTP_USER_AGENT} Amazonbot [NC]
 RewriteRule .* - [F,L]
 Order Deny,Allow
 Deny from 5.9.151.67
