--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       context: api/deploy/
       dockerfile: MySQL.Dockerfile
     volumes:
-      - db_data:/var/lib/mysql
+      - db_data:/var/lib/mariadb
     restart: always
     ports:
       - "3306:3306"
