Comment out no-longer-supported options

--- a/deploy/sphinx.conf
+++ b/deploy/sphinx.conf
@@ -155,7 +155,7 @@ index bills
 	# charset encoding type
 	# optional, default is 'sbcs'
 	# known types are 'sbcs' (Single Byte CharSet) and 'utf-8'
-	charset_type		= utf-8
+	# charset_type		= utf-8
 
 	# charset definition and case folding rules "table"
 	# optional, default value depends on charset_type
@@ -437,7 +437,7 @@ searchd
 	# max amount of matches the daemon ever keeps in RAM, per-index
 	# WARNING, THERE'S ALSO PER-QUERY LIMIT, SEE SetLimits() API CALL
 	# default is 1000 (just like Google)
-	max_matches		= 1000
+	#max_matches		= 1000
 
 	# seamless rotate, prevents rotate stalls if precaching huge datasets
 	# optional, default is 1
