Don't try to load stopwords
The file doesn't exist.

--- a/deploy/sphinx.conf
+++ b/deploy/sphinx.conf
@@ -130,7 +130,7 @@ index bills
 	# optional, default is empty
 	# contents are plain text, charset_table and stemming are both applied
 	#
-	stopwords		= /var/lib/sphinxsearch/data/stopwords.txt
+	#stopwords		= /var/lib/sphinxsearch/data/stopwords.txt
 
 
 	# wordforms file, in "mapfrom > mapto" plain text format
