--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install packages with APT
         run: >-
           sudo apt-get update && 
-          sudo apt-get install -y apt-transport-https ca-certificates gnupg-agent libreadline7 libtinfo5 gnupg gnup2 &&
+          sudo apt-get install -y apt-transport-https ca-certificates gnupg-agent libreadline7 libtinfo5 gnupg gnupg2 &&
           sudo apt-get install -y awscli php5.6-cli php5.6-curl php5.6-memcached php5.6-mysql yarn zip
       - uses: actions/checkout@v3
       - run: sudo apt-get update -qq
