--- a/.github/workflows/build-php8.yml
+++ b/.github/workflows/build-php8.yml
@@ -25,9 +25,9 @@ jobs:
       - run: find htdocs/*.php -print0 | xargs -0 -n1 -P8 php -l
       - name: Set up Docker
         uses: docker/setup-buildx-action@v1
-      - name: Build and run Docker
-        run: docker compose up -d
+      - name: Run Docker
+        run: ./docker-run.sh
       - name: Run tests
-        run: docker exec -i rs_web vendor/bin/phpunit
+        run: docker exec -i rs_web /var/www/deploy/tests/run-all.sh
       - name: Stop Docker
-        run: docker compose down
+        run: ./docker-stop.sh
