--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
-version: '3.2'
+version: '3.8'
 services:
+  # Primary web interface
   web:
     build:
       context: deploy/
       dockerfile: Web.Dockerfile
     depends_on:
-      - api
-      - db
+      api:
+        condition: service_healthy
+      db:
+        condition: service_healthy
     ports:
       - "8000:80"
     volumes:
@@ -16,12 +19,21 @@ services:
     container_name: rs_web
     networks:
       - rs_network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80/"]
+      start_period: 30s
+      interval: 15s
+      timeout: 5s
+      retries: 3
+
+  # API service
   api:
     build:
       context: api/deploy/
       dockerfile: API.Dockerfile
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     ports:
       - "5001:80"
     volumes:
@@ -31,6 +43,14 @@ services:
     container_name: rs_api
     networks:
       - rs_network
+    healthcheck:
+      test: ["CMD", "apache2ctl", "-M"]
+      start_period: 30s
+      interval: 15s
+      timeout: 5s
+      retries: 3
+
+  # Database
   db:
     build:
       context: api/deploy/
@@ -43,6 +63,14 @@ services:
     container_name: rs_db
     networks:
       - rs_network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-ppassword"]
+      start_period: 30s
+      interval: 15s
+      timeout: 5s
+      retries: 3
+
+  # Security testing service
   owasp_zap:
     build:
       context: deploy/
@@ -52,6 +80,7 @@ services:
     container_name: rs_zap
     networks:
       - rs_network
+
 volumes:
   db_data: {}
 networks:
