--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,11 +39,15 @@ jobs:
             apt-transport-https \
             ca-certificates \
             gnupg-agent \
-            libtinfo5 \
             gnupg \
             gnupg2 \
-            awscli \
             zip
+            
+      - name: Install AWS CLI
+        run: |
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
             
       - name: Install Composer dependencies
         run: composer install --no-interaction --prefer-dist
