Try using this new syntax for the branch name

--- a/.github/workflows/build-php8.yml
+++ b/.github/workflows/build-php8.yml
@@ -55,14 +55,22 @@ jobs:
         shell: bash
         run: echo "##[set-output name=github_branch;]$(echo $GITHUB_BRANCH)"
         id: get_branch
+      - name: Get the branch name
+        shell: bash
+        id: branch
+        run: |
+          echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
     outputs:
       github_branch: ${{ steps.get_branch.outputs.github_branch }}
+      branch_name: ${{ steps.branch.outputs.branch_name }}
 
   deploy:
     runs-on: ubuntu-24.04
     needs: build # Don't deploy unless the build succeeds
     steps:
       - run: echo "Deploy branch is ${{ needs.build.outputs.github_branch }}"
+      - name: Check branch
+        run: echo "Deploying branch ${{ needs.build.outputs.branch_name }}"
       - name: Get the secret-populated code
         uses: actions/download-artifact@v4
         with:
