Create appspec.yml for PHP 8 branch

--- a/.github/workflows/build-php8.yml
+++ b/.github/workflows/build-php8.yml
@@ -46,7 +46,7 @@ jobs:
       - run: >-
           if [ "$GITHUB_BRANCH" = "master" ]; then
             cp appspec-staging.yml appspec.yml
-          elif [ "$GITHUB_BRANCH" = "deploy" ]; then
+          elif [ "$GITHUB_BRANCH" = "php8" ]; then
             cp appspec-deploy.yml appspec.yml
           fi
       - name: Save secret-populated code for a subsequent deploy step
