Add deploy branch option back in

--- a/.github/workflows/build-php8.yml
+++ b/.github/workflows/build-php8.yml
@@ -46,6 +46,8 @@ jobs:
       - run: >-
           if [ "$GITHUB_BRANCH" = "master" ]; then
             cp appspec-staging.yml appspec.yml
+          elif [ "$GITHUB_BRANCH" = "deploy" ]; then
+            cp appspec-deploy.yml appspec.yml
           elif [ "$GITHUB_BRANCH" = "php8" ]; then
             cp appspec-deploy.yml appspec.yml
           fi
