--- a/.github/workflows/build-php8.yml
+++ b/.github/workflows/build-php8.yml
@@ -49,7 +49,7 @@ jobs:
           elif [ "$GITHUB_BRANCH" = "deploy" ]; then
             cp appspec-deploy.yml appspec.yml
           elif [ "$GITHUB_BRANCH" = "php8" ]; then
-            cp appspec-deploy.yml appspec.yml
+            cp appspec-deploy.yml appspec.yml && ls appspec*
           fi
       - name: Save secret-populated code for a subsequent deploy step
         uses: actions/upload-artifact@v4
