Set a timeout, run as root

--- a/appspec-deploy.yml
+++ b/appspec-deploy.yml
@@ -18,5 +18,7 @@ permissions:
 hooks:
   BeforeInstall:
     - location: deploy/predeploy.sh
+      timeout: 300
+      runas: root
   AfterInstall:
     - location: deploy/postdeploy.sh
