--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run Docker
         run: ./docker-run.sh
       - name: Run tests
-        run: docker exec -i rs_web /var/www/deploy/tests/run-all.sh
+        run: deploy/tests/run-all.sh
       - name: Stop Docker
         run: ./docker-stop.sh
       - name: Populate secrets and ZIP
