--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,10 +40,9 @@ jobs:
             ./deploy/increase_verbosity.sh
           fi
       - run: >-
-          if [ "${{ github.ref_name }}" = "master" ]; then
+          if [ "$GITHUB_REF_NAME" = "master" ]; then
             cp appspec-staging.yml appspec.yml
-          elif [ "${{ github.ref_name }}" = "deploy" ]; then
-            cp appspec-deploy.yml appspec.yml
+          elif [ "$GITHUB_REF_NAME" = "deploy" ]; then
             cp appspec-deploy.yml appspec.yml
           fi
       - name: Save secret-populated code for a subsequent deploy step
