--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v3
+      - name: Set branch name as env var
+        run: echo "GITHUB_REF_NAME=${{ github.ref_name }}" >> $GITHUB_ENV
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -36,13 +38,13 @@ jobs:
           *.git* *.scannerwork* && mkdir -p upload && mv rs-web-deploy.zip
           upload/rs-web-deploy.zip
       - run: >-
-          if [ "$GITHUB_REF_NAME" = "master" ]; then
+          if [ "${{ github.ref_name }}" = "master" ]; then
             ./deploy/increase_verbosity.sh
           fi
       - run: >-
-          if [ "$GITHUB_REF_NAME" = "master" ]; then
+          if [ "${{ github.ref_name }}" = "master" ]; then
             cp appspec-staging.yml appspec.yml
-          elif [ "$GITHUB_REF_NAME" = "deploy" ]; then
+          elif [ "${{ github.ref_name }}" = "deploy" ]; then
             cp appspec-deploy.yml appspec.yml
           fi
       - name: Save secret-populated code for a subsequent deploy step
@@ -66,7 +68,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
           aws-region: us-east-1
       - name: CodeDeploy Deployment
-        if: ${{ github.ref_name }} == 'php8'
+        if: ${{ github.ref_name == 'php8' }}
         run: |
           aws deploy push --application-name RS-Web \
             --s3-location s3://deploy.richmondsunlight.com/rs-web-new.zip \
