--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
+      - name: Set branch name as env var
+        run: echo "GITHUB_REF_NAME=${{ github.ref_name }}" >> $GITHUB_ENV
+
       - uses: Firenza/secrets-to-env@v1.2.0
         with:
           secrets: ${{ toJSON(secrets) }}
@@ -28,9 +31,6 @@ jobs:
         with:
           php-version: '8.4'
           extensions: mysqli, curl, memcached, mysql
-          
-      - name: Set branch name
-        run: echo "GITHUB_BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
       
       - name: Install system dependencies
         run: |
@@ -89,10 +89,10 @@ jobs:
           
       - name: Configure deployment type
         run: |
-          if [ "$GITHUB_BRANCH" = "master" ]; then
+          if [ "${{ github.ref_name }}" = "master" ]; then
             ./deploy/increase_verbosity.sh
             cp appspec-staging.yml appspec.yml
-          elif [ "$GITHUB_BRANCH" = "deploy" ]; then
+          elif [ "${{ github.ref_name }}" = "deploy" ]; then
             cp appspec-deploy.yml appspec.yml
           fi
           
@@ -104,10 +104,6 @@ jobs:
           path: upload/
           retention-days: 1
           if-no-files-found: error
-          
-      - name: Set output
-        id: vars
-        run: echo "branch=${GITHUB_BRANCH}" >> $GITHUB_OUTPUT
 
     outputs:
       branch: ${{ steps.vars.outputs.branch }}
